refactor: replace `AppException` with specific exception classes for improved error handling
- Introduced custom exceptions (`PublicProfileNotFoundException`, `NoteNotFoundException`, etc.) to replace generic `AppException` usage.
- Updated `UuidParsingUtils` to accept exception suppliers for parsing errors.
- Refactored multiple services (`PublicProfileService`, `NoteService`, etc.) and their methods to use custom exceptions.
- Added new exception classes and corresponding test cases for better maintainability and clarity.